# position-encoding

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  format-typing-check.yml
position_encoding/: relative.py
src/position_encoding/: __init__.py  absolute.py
tests/: test_position_encoding.py
