[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "position-encoding"
description = "A library that encodes sequence positions in torch"
authors = [{name = "Coos Baakman"}]
maintainers = [{name = "Coos Baakman"}]
license = "Apache-2.0"
version = "1.0.0"
requires-python = ">= 3.11"
dependencies = [
  "torch>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest"]
